--- a/package.json
+++ b/package.json
@@ -11,5 +11,6 @@
     "type": "git",
     "url": "https://github.com/AS1757/fs-handson.git"
   },
-  "author": "Jane Doe"
+  "author": "Amit",
+  "description": "Project Description"
 }
